2.0.0-beta2
- P4A_AUTO_MAXLENGTH is now disabled by default
- Afrikaans translation was added (thanks to Ewald Horn)
- now we handle when db driver returns "table.field" as field name

2.0.0-beta1
- if you use P4A_DB_Source::setQuery now every field become readonly
- a bug with P4A_DB_Source::_composeSelectCountQuery() and UNION queries was solved (thanks to alexiadeath)
- P4A_Tab_Pane CSS is now loaded by default
- P4A_Table::setVisible cols now also manages column order
- a bug on P4A::openPopup() passing javascripts thru an ajax call was solved
- P4A::isPopupOpened() was added
- P4A::openMask() can now be called thru an ajax action
- now a single P4A_Table row can be disabled, you need to intercept the beforeDisplay on P4A_Table_Rows object and add a "_p4a_enabled" index to the row setting it to true/false
- P4A session browser was added (clone your browser window with CTRL-N and add in the address bar ?_p4a_session_browser)
- P4A_I18N::autoFormat() and P4A_I18N::autoUnformat() now support booleans
- auto translate booleans inside P4A_Table was implemented
- a bug with P4A_Toolbar::setSize() was solved
- P4A_Array_Source now can load simple array (field 0 is created)
- P4A_Tab_Pane::addPage() was implemented
- P4A_DB_Navigator::enableSelectedElement() was added to allow user to click also on the selected element

1.99.22
- P4A_Is_Error(), P4A_New_Line() and P4A_Space() were removed
- DB adapter (adodb) inclusion was moved to p4a_db.php thus it's easier to use p4a_db outsite a p4a application
- P4A_Field::setError() was added
- P4A_Validate class was added to check emails/uris/dates/numbers etc... (now it simply uses PEAR::Validate)
- some changes were done on products_catalogue sample application
- New rich_textarea skin was added

1.99.21
- PEAR::Console_Getopt 1.2.2 was re-introduced to avoid installation problems
- P4A_Object::dropIntercept() method wad added
- P4A_Table::addActionCol() method was added
- P4A_Table_Col::setValue() method was added

1.99.20