@@ -1,28 +1,28 @@
-<?php 
+<?php
 /*
  * FCKeditor - The text editor for Internet - http://www.fckeditor.net
  * Copyright (C) 2003-2007 Frederico Caldeira Knabben
- * 
+ *
  * == BEGIN LICENSE ==
- * 
+ *
  * Licensed under the terms of any of the following licenses at your
  * choice:
- * 
+ *
  *  - GNU General Public License Version 2 or later (the "GPL")
  *    http://www.gnu.org/licenses/gpl.html
- * 
+ *
  *  - GNU Lesser General Public License Version 2.1 or later (the "LGPL")
  *    http://www.gnu.org/licenses/lgpl.html
- * 
+ *
  *  - Mozilla Public License Version 1.1 or later (the "MPL")
  *    http://www.mozilla.org/MPL/MPL-1.1.html
- * 
+ *
  * == END LICENSE ==
- * 
+ *
  * File Name: basexml.php
  * 	These functions define the base of the XML response sent by the PHP
  * 	connector.
- * 
+ *
  * File Authors:
  * 		Frederico Caldeira Knabben (www.fckeditor.net)
  */
@@ -49,15 +49,15 @@ function SetXmlHeaders()
 function CreateXmlHeader( $command, $resourceType, $currentFolder )
 {
 	SetXmlHeaders() ;
-	
+
 	// Create the XML document header.
 	echo '<?xml version="1.0" encoding="utf-8" ?>' ;
 
 	// Create the main "Connector" node.
 	echo '<Connector command="' . $command . '" resourceType="' . $resourceType . '">' ;
-	
+
 	// Add the current folder node.
-	echo '<CurrentFolder path="' . ConvertToXmlAttribute( $currentFolder ) . '" url="' . ConvertToXmlAttribute( GetUrlFromPath( $resourceType, $currentFolder ) ) . '" />' ;
+	echo '<CurrentFolder path="' . ConvertToXmlAttribute( $currentFolder ) . '" url="' . ConvertToXmlAttribute( GetUrlFromPath( '', $currentFolder ) ) . '" />' ;
 }
 
 function CreateXmlFooter()
@@ -68,12 +68,12 @@ function CreateXmlFooter()
 function SendError( $number, $text )
 {
 	SetXmlHeaders() ;
-	
+
 	// Create the XML document header
 	echo '<?xml version="1.0" encoding="utf-8" ?>' ;
-	
+
 	echo '<Connector><Error number="' . $number . '" text="' . htmlspecialchars( $text ) . '" /></Connector>' ;
-	
+
 	exit ;
 }
 ?>
