@@ -2,6 +2,7 @@
 - P4A_AUTO_MAXLENGTH is now disabled by default
 - Afrikaans translation was added (thanks to Ewald Horn)
 - now we handle when db driver returns "table.field" as field name
+- a bug with rich text editor file manager was solved
 
 2.0.0-beta1
 - if you use P4A_DB_Source::setQuery now every field become readonly
